--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@expo-google-fonts/lato": "^0.2.2",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
+    "expo-app-loading": "~2.1.0",
+    "expo-font": "~10.2.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.3",
     "react": "18.0.0",
