--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "firebase": "^9.9.3",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-image-picker": "^4.10.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react-native-screens": "~3.15.0",
+    "expo-image-picker": "~13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
