--- a/package.json
+++ b/package.json
@@ -17,14 +17,18 @@
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
     "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.3",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-document-picker": "^8.1.1",
+    "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "expo-image-picker": "~13.3.1"
+    "expo-document-picker": "~10.3.0",
+    "expo-file-system": "~14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
