--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/lato": "^0.2.2",
+    "@google-cloud/storage": "^6.5.2",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
     "axios": "^0.27.2",
     "expo": "~46.0.9",
     "expo-app-loading": "~2.1.0",
+    "expo-asset": "~8.6.1",
+    "expo-document-picker": "~10.3.0",
+    "expo-file-system": "~14.1.0",
     "expo-font": "~10.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.9.3",
+    "local-xmlhttprequest": "^2.0.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-document-picker": "^8.1.1",
     "react-native-fs": "^2.20.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "expo-document-picker": "~10.3.0",
-    "expo-file-system": "~14.1.0"
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
